--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -10,7 +10,9 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
+    proxy_set_header Host $proxy_host;
+    proxy_ssl_server_name on;
+    proxy_ssl_name $proxy_host;
   }
 
   location / {
